--- a/Django Web Framework/css/styles.css
+++ b/Django Web Framework/css/styles.css
@@ -4,12 +4,15 @@
     margin: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
-    color: #1570a6;
+    color: #1212B2;
+    background:url(img/body.jpeg);
 }
 
 .content {
     margin: 0 auto;
     max-width: 980px;
+    background-color: white;
+    border-color: #2AB200;
 }
 
 section:first-child{
@@ -17,9 +20,15 @@ section:first-child{
 
 }
 
+section:last-child{
+
+	padding-bottom: 25px;
+}
 
 nav {
     vertical-align: middle;
+    left: 100px;
+    padding-left: 25%;
 
 }
 
@@ -32,34 +41,31 @@ nav ul li {
 }
 	
 nav > ul > li > a {
-	color: #aaa;
+	color: #FF6719;
 	display: block;
 	line-height: 56px;
 	padding: 0 24px;
 	text-decoration: none;
 }
 
-.infoblock {
-    width: 32%;
-    vertical-align: top;
+.infoBlock {
+
+	padding-top: 15px;
 }
 
-.infoblock h3 {
+.infoBlock h3 {
     width: 100%;
 }
 
-.block ul {
-    padding: 0px 5px;
-}
+.infoBlock p {
+    padding: 20px 5px;
 
-.block ul li {
-    list-style: none;
-    padding:10px 0px;
 }
 
 .center {
 
 text-align: center;
+color: #2AB200;
 
 }
 
@@ -87,8 +93,28 @@ table {
 	color:#000000;
 }
 
-td:hover {background-color: #3399FF;}
-td:hover a:active {color:red;}
+td:hover {
+
+	background-color: #3399FF;
+	color: white;
+
+}
+
+a.specialLink:link { 
+	color: black; 
+	text-decoration: none;
+
+}
+a.specialLink:visited { 
+
+	color: black; 
+	text-decoration: none;
+}
+a.specialLink:hover { 
+
+	color: red; 
+	text-decoration: none;
+}
 
 
 
